# LLM-Scribe

./: .env.example  .gitignore  LICENSE  MEMORY_MODULE_ANALYSIS.md  README.md  RETRIEVAL_IMPROVEMENT_SUMMARY.md  RETRIEVAL_MODULE_ANALYSIS.md  config.env.example  docker-compose.yml  pyproject.toml  readme.md  requirements-extra.txt  requirements.txt  run_local.py
llm_scribe/: __init__.py  __main__.py  config.py
llm_scribe/DB/: chat_loader.py  connection.py
llm_scribe/LLM/: model.py
llm_scribe/Prompt/: bascial_prompt.py  create_prompt.py  prompt1.py  prompt2.py  prompt3.py
llm_scribe/cache/: __init__.py
llm_scribe/cache/data_cache/: __init__.py  redis_cache.py
llm_scribe/cache/llm_cache/: __init__.py  cache_key.py  factory.py  gptcache.py  semantic_cache.py
llm_scribe/common/: time_utils.py
llm_scribe/core/: __init__.py
llm_scribe/core/chains/: __init__.py  compression_chain.py  extraction_chain.py  summary_chain.py
llm_scribe/core/graph/: __init__.py  state.py  summary_graph.py
llm_scribe/core/models/: __init__.py  memory.py  summary.py
llm_scribe/evaluation/: __init__.py
llm_scribe/evaluation/metrics/: __init__.py  quality_metrics.py
llm_scribe/evaluation/monitoring/: __init__.py  langsmith_tracer.py
llm_scribe/llm/: __init__.py  model_selector.py
llm_scribe/llm/moonshot/: __init__.py  model_factory.py  streaming.py  token_counter.py
llm_scribe/llm/strategy/: __init__.py  model_selector.py
llm_scribe/main/: manger.py
llm_scribe/memory/: __init__.py  cache.py  manager.py  memory_long.py  memory_refresh.py  memory_short.py  refresh.py  semantic.py
llm_scribe/memory/compression/: __init__.py  memory_compressor.py
llm_scribe/memory/detail/: episodic_memory.py  memory_compressor.py  semantic_memory.py
llm_scribe/memory/episodic/: __init__.py  episodic_memory.py
llm_scribe/memory/semantic/: __init__.py  (+1 more)
llm_scribe/pipeline/: __init__.py  cq_filter.py  meta_extractor.py
llm_scribe/prompts/: __init__.py
llm_scribe/retrieval/: __init__.py  hybrid_search.py
llm_scribe/storage/: __init__.py
llm_scribe/utils/: __init__.py  filter.py  meta_utils.py  msg_utils.py  send_forward_msg.py  text_utils.py  tools.py
src/: __init__.py  __main__.py  bot_plugin.py  config.py
src/application/: __init__.py
src/cache/: __init__.py
src/common/: __init__.py
src/core/: __init__.py
src/domain/: __init__.py
src/infrastructure/: __init__.py
src/interfaces/: __init__.py
src/llm/: __init__.py  model_selector.py
src/memory/: __init__.py  manager.py
src/pipeline/: __init__.py  meta_extractor.py
src/prompts/: __init__.py
src/retrieval/: __init__.py  hybrid_search.py
src/storage/: __init__.py
test/: TEST_README.md  __init__.py  debug_format_messages.py  test_all_modules.py  test_llm.py  test_single.py
(+164 files in other folders)
