[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LLM-Scribe"
version = "0.1.0"
description = "LangChain-driven group chat summarizer plugin for NoneBot / NapCat"
readme = "README.md"
authors = [
  { name = "YTQin", email = "h2417185282@outlook.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["LangChain", "NoneBot", "NapCat", "Chat Summary", "LLM", "Memory"]
dependencies = [
  # Core llm Framework
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.0",
  # Vector Database & Embeddings
  "chromadb>=0.4.0",
  "sentence-transformers>=2.3.0",
  # Data Processing
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "tiktoken>=0.7.0",
  "jieba>=0.42.1",
  # Database & Cache
  "pymysql>=1.1.0",
  "aiomysql>=0.2.0",
  "redis>=5.0.0",
  # Bot Framework
  "nonebot2[fastapi]>=2.2.0",
  "nonebot-adapter-onebot>=2.4.3",
  # Utilities
  "python-dotenv>=1.0.0",
  "numpy>=1.24.0"
]

[project.urls]
Homepage = "https://github.com/YTQin/LLM-Scribe"
Documentation = "https://github.com/YTQin/LLM-Scribe#readme"
Issues = "https://github.com/YTQin/LLM-Scribe/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_scribe*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
"llm_scribe" = ["*.py", "*.txt", "*.md"]

[tool.setuptools]
zip-safe = false
